--- a/map.html
+++ b/map.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
-//global variables
-
-var apiKey='AIzaSyDB8GQeCMAItWN2H-sop_tv6b61EPI8h5M';
-</script>
 
 
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDB8GQeCMAItWN2H-sop_tv6b61EPI8h5M"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 
 
 <script>
+
 function initialize() {
 
   var latLong={lat:36.0851696,lng:-115.1829873};
-	
-  var mapProp = {
-    center:latLong,
-    zoom:10,
-    mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+  var map=initMap(latLong);
   var marker = new google.maps.Marker({
-          position: latLong,
-          map: map,
-          title: 'Hello World!'
-        });
+		  position: latLong,
+		  map: map,
+		  title: 'Hello World!'
+		});
+	marker.addListener('click', function() {
+		  //map.setZoom(10);
+		  //map.setCenter(marker.getPosition());
+		  var infowindow=new google.maps.InfoWindow();
+		  infowindow.setContent('bees bees bees');
+		  infowindow.open(map,marker);
+		});
   
   
 }
+
+function initMap(latLong){
+	var mapProp = {
+		center:latLong,
+		zoom:8,
+		mapTypeId:google.maps.MapTypeId.ROADMAP
+	};
+	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+	return map;
+}
+
 google.maps.event.addDomListener(window, 'load', initialize);
+
 </script>
 </head>
 
