--- a/map.html
+++ b/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="width:100%;height:100%;">
 <head>
 
 
@@ -15,7 +15,9 @@ function detectBrowser() {
   var mapdiv = document.getElementById("googleMap");
 
   if (useragent.indexOf('iPhone') != -1 || useragent.indexOf('Android') != -1 ) {
-    mapdiv.style.width = '100%';
+    //mapdiv.style.width = '100%';
+    //mapdiv.style.height = '100%';
+	mapdiv.style.width = '100%';
     mapdiv.style.height = '100%';
   } else {
     mapdiv.style.width = '600px';
@@ -38,6 +40,7 @@ function getRelayrData(deviceId,token,map){
 						latitude=element.value.latitude;
 						longitude=element.value.longitude;
 						latLong={lat:latitude,lng:longitude};
+						console.log(latLong);
 						getAudioData('f1c46277-a3cb-4dc0-af13-df03466a3b74',
 									'Bearer 1dVN.F0UySj_a5kVltaTb3Qg57M-I5wV',latLong,map);
 						
@@ -64,7 +67,7 @@ function getAudioData(deviceId,token,latLong,map){
 				volume=data.readings[0].value;
 				markerData={"volume":volume};
 				getWeather(map,latLong,markerData);
-				marker=initMarker(map,latLong,"<div>volume: "+volume+"<br />bees bees bees</div>");
+				//marker=initMarker(map,latLong,"<div>volume: "+volume+"<br />bees bees bees</div>");
 			}
 	});
 }
@@ -128,6 +131,7 @@ function getWeather(map,latLong,content){
 				humidity=data.current_observation.relative_humidity;
 				markerData.temperature=temperature;
 				markerData.humidity=humidity;
+				console.log(temperature);
 				marker=initMarker(map,latLong,markerData);
 			}
 	});
@@ -142,8 +146,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 </head>
 
-<body>
-<div id="googleMap" style="width:1000px;height:1000px;"></div>
+<body style="width:100%;height:100%;">
+<div id="googleMap" style="position:absolute;width:600px;height:800px;"></div>
 </body>
 
 </html>
